[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 141.0
margin_bottom = 600.0
custom_constants/separation = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rFood" type="Button" parent="VBoxContainer"]
margin_right = 131.0
margin_bottom = 20.0
text = "Harvest Wheat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hFood" type="Button" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 131.0
margin_bottom = 58.0
text = "Hire Farmers"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hWood" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 131.0
margin_bottom = 96.0
text = "Hire Lumberjacks"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceTracker" type="Label" parent="."]
anchor_right = 1.0
margin_left = 152.0
margin_top = 10.0
margin_right = -315.0
margin_bottom = 95.0
text = "Food: 0g"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/rFood" to="." method="_on_rFood_pressed"]
[connection signal="pressed" from="VBoxContainer/hFood" to="." method="_on_hFood_pressed"]
[connection signal="pressed" from="VBoxContainer/hWood" to="." method="_on_hWood_pressed"]
